feat: 단일 미션 구조로 변경