@@ -1,17 +1,18 @@
 package com.mtvs.flykidsbackend.mission.service;
 
-import com.mtvs.flykidsbackend.mission.dto.*;
-import com.mtvs.flykidsbackend.mission.entity.DroneMissionItemResult;
+import com.mtvs.flykidsbackend.mission.dto.DroneMissionResultRequestDto;
 import com.mtvs.flykidsbackend.mission.entity.DroneMissionResult;
-import com.mtvs.flykidsbackend.mission.dto.DroneMissionResultRequestDto.MissionItemResult;
 import com.mtvs.flykidsbackend.mission.entity.Mission;
-import com.mtvs.flykidsbackend.mission.entity.MissionItem;
+import com.mtvs.flykidsbackend.mission.model.MissionResultStatus;
 import com.mtvs.flykidsbackend.mission.model.MissionType;
-import com.mtvs.flykidsbackend.mission.repository.*;
+import com.mtvs.flykidsbackend.mission.repository.DroneMissionResultRepository;
+import com.mtvs.flykidsbackend.mission.repository.MissionRepository;
 import com.mtvs.flykidsbackend.user.repository.UserRepository;
+import com.mtvs.flykidsbackend.mission.dto.LeaderboardEntryDto;
+import com.mtvs.flykidsbackend.mission.dto.PlayerPerformanceStatsDto;
+import com.mtvs.flykidsbackend.mission.dto.MissionHistoryResponseDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import com.mtvs.flykidsbackend.mission.model.MissionResultStatus;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
@@ -27,86 +28,61 @@ public class DroneMissionResultService {
 
     private final DroneMissionResultRepository resultRepository;
     private final MissionRepository missionRepository;
-    private final MissionItemRepository missionItemRepository;
     private final ScoreCalculator scoreCalculator;
     private final UserRepository userRepository;
-    private final DroneMissionItemResultRepository itemResultRepository;
 
     /**
-     * 미션 결과 저장
-     * <p>복합 미션 요청을 받아 각 하위 미션(COIN/OBSTACLE/PHOTO)의 결과를 저장한다.</p>
+     * 미션 결과 저장 (단일 미션 결과 저장)
      *
      * @param userId    사용자 ID
      * @param missionId 미션 ID
-     * @param dto       수행 결과 요청 DTO
-     * @return 저장된 결과 리스트
-     * @throws NoSuchElementException 미션 또는 미션 아이템을 찾을 수 없는 경우
+     * @param dto       수행 결과 요청 DTO (단일 아이템 결과 포함)
+     * @return 저장된 결과 엔티티
      */
-    public List<DroneMissionResult> saveComplexMissionResult(Long userId,
-                                                             Long missionId,
-                                                             DroneMissionResultRequestDto dto) {
-
+    @Transactional
+    public DroneMissionResult saveMissionResult(Long userId, Long missionId, DroneMissionResultRequestDto dto) {
         Mission mission = missionRepository.findById(missionId)
                 .orElseThrow(() -> new NoSuchElementException("해당 미션을 찾을 수 없습니다."));
 
-        List<MissionItem> missionItems = missionItemRepository.findByMissionId(missionId);
+        // 점수 계산 및 성공 여부 판정 시 DTO 전체 전달
+        int score = scoreCalculator.calculateScore(mission.getType(), dto);
+        boolean success = scoreCalculator.isMissionSuccess(mission.getType(), dto, mission);
 
-        return dto.getItemResults().stream()
-                .map(itemResult -> {
-                    MissionItem missionItem = missionItems.stream()
-                            .filter(mi -> mi.getType() == itemResult.getMissionType())
-                            .findFirst()
-                            .orElseThrow(() -> new NoSuchElementException("해당 미션 아이템을 찾을 수 없습니다."));
+        // 단일 MissionItemResult 필드 사용
+        DroneMissionResultRequestDto.MissionItemResult item = dto.getItemResult();
 
-                    int score = scoreCalculator.calculateScore(
-                            missionItem.getType(),
-                            itemResult.getTotalTime(),
-                            itemResult.getDeviationCount(),
-                            itemResult.getCollisionCount(),
-                            Optional.ofNullable(itemResult.getCollectedCoinCount()).orElse(0)
-                    );
+        DroneMissionResult result = DroneMissionResult.builder()
+                .userId(userId)
+                .mission(mission)
+                .droneId(dto.getDroneId())
+                .totalTime(item.getTotalTime())
+                .deviationCount(item.getDeviationCount())
+                .collisionCount(item.getCollisionCount())
+                .score(score)
+                .status(success ? MissionResultStatus.SUCCESS : MissionResultStatus.FAIL)
+                .build();
 
-                    boolean success = isMissionSuccess(missionItem.getType(), itemResult, missionItem);
-                    MissionResultStatus status = success ? MissionResultStatus.SUCCESS : MissionResultStatus.FAIL;  // ✅ 선언 추가
-
-                    return resultRepository.save(
-                            DroneMissionResult.builder()
-                                    .userId(userId)
-                                    .mission(mission)
-                                    .droneId(dto.getDroneId())
-                                    .totalTime(itemResult.getTotalTime())
-                                    .deviationCount(itemResult.getDeviationCount())
-                                    .collisionCount(itemResult.getCollisionCount())
-                                    .score(score)
-                                    .status(status)
-                                    .build()
-                    );
-                })
-                .toList();
+        return resultRepository.save(result);
     }
+
 
     /**
      * 미션 성공 여부 판단
+     * - 단일 미션 수행 결과를 바탕으로 성공/실패를 결정한다.
      *
-     * @param type        미션 타입
-     * @param dto         사용자 제출 결과
-     * @param missionItem 기준 미션 정보
-     * @return 성공 여부
+     * @param type    미션 유형 (COIN, OBSTACLE, PHOTO)
+     * @param item    단일 미션 아이템 수행 결과 DTO
+     * @param mission DB에 저장된 미션 정보 (성공 기준 데이터 포함)
+     * @return 성공 여부 (true: 성공, false: 실패)
+     * @throws IllegalArgumentException 지원하지 않는 미션 유형일 경우 발생
      */
-    public boolean isMissionSuccess(MissionType type,
-                                    MissionItemResult dto,
-                                    MissionItem missionItem) {
-
-        if (type == null)
-            throw new IllegalArgumentException("지원하지 않는 미션 유형입니다.");
-
+    public boolean isMissionSuccess(MissionType type, DroneMissionResultRequestDto.MissionItemResult item, Mission mission) {
         return switch (type) {
-            case COIN -> dto.getCollectedCoinCount() != null
-                    && dto.getCollectedCoinCount()
-                    == Optional.ofNullable(missionItem.getTotalCoinCount()).orElse(0);
-            case OBSTACLE -> dto.getCollisionCount() < 3;
-            case PHOTO -> Boolean.TRUE.equals(dto.getPhotoCaptured());
-            default -> throw new IllegalArgumentException("지원하지 않는 미션 유형입니다: " + type);
+            case COIN -> item.getCollectedCoinCount() != null &&
+                    item.getCollectedCoinCount().equals(mission.getTotalCoinCount());
+            case OBSTACLE -> item.getCollisionCount() < 3;
+            case PHOTO -> Boolean.TRUE.equals(item.getPhotoCaptured());
+            default -> throw new IllegalArgumentException("지원하지 않는 미션 유형입니다.");
         };
     }
 
@@ -130,7 +106,7 @@ public class DroneMissionResultService {
                         .collisionCount(r.getCollisionCount())
                         .completedAt(r.getCompletedAt())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -153,18 +129,16 @@ public class DroneMissionResultService {
                         .totalTime(r.getTotalTime())
                         .completedAt(r.getCompletedAt())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
      * 사용자 전체 미션 통계 조회
-     * <p>성공 세트 수, 평균 점수, 총 비행 시간 등을 포함한다.</p>
      *
      * @param userId 사용자 ID
      * @return 통계 DTO
      */
     public PlayerPerformanceStatsDto getPlayerStats(Long userId) {
-
         List<DroneMissionResult> results =
                 resultRepository.findByUserIdAndStatusNot(userId, MissionResultStatus.ABORT);
         int totalAttempts = results.size();
@@ -199,16 +173,12 @@ public class DroneMissionResultService {
      * @param missionId 중단된 미션의 ID
      * @param userId    미션을 중단한 사용자 ID
      * @param droneId   사용한 드론의 ID
-     * @throws IllegalArgumentException 미션이 존재하지 않을 경우 예외 발생
      */
     @Transactional
     public void abortMission(Long missionId, Long userId, String droneId) {
-
-        // 1. 미션 존재 여부 확인
         Mission mission = missionRepository.findById(missionId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 미션이 존재하지 않습니다."));
 
-        // 2. 중단된 결과 생성 (성공 여부 false, 점수/시간/이탈/충돌 모두 0으로 초기화)
         DroneMissionResult result = DroneMissionResult.builder()
                 .userId(userId)
                 .droneId(droneId)
@@ -220,37 +190,28 @@ public class DroneMissionResultService {
                 .mission(mission)
                 .build();
 
-        // 3. 결과 저장
         resultRepository.save(result);
     }
 
     /**
-     * 실패한 단계 재도전 처리 메서드
-     * <p>
-     * - 유저가 특정 미션을 다시 시도할 때, 기존에 실패한 단계만 초기화하여
-     * NOT_ATTEMPTED 상태로 변경한다.
-     * - 이미 성공한 단계는 그대로 유지하여, 실패한 단계부터 이어서 재도전 가능하게 한다.
-     * </p>
+     * 실패한 미션 결과들을 재도전 가능 상태로 초기화한다.
+     * - 유저가 특정 미션을 다시 시도할 때, 실패 상태(FAIL)인 결과를
+     *   NOT_ATTEMPTED 상태로 변경하여 재도전할 수 있도록 한다.
      *
      * @param userId    재도전할 유저의 ID
      * @param missionId 재도전할 미션의 ID
      */
     @Transactional
-    public void retryFailedItems(Long userId, Long missionId) {
+    public void retryFailedMission(Long userId, Long missionId) {
+        List<DroneMissionResult> failedResults = resultRepository.findByUserIdAndMissionIdAndStatus(
+                userId,
+                missionId,
+                MissionResultStatus.FAIL
+        );
 
-        // 1. 해당 유저가 수행한 미션 중, 실패(Failure)한 단계들만 조회
-        List<DroneMissionItemResult> failedItems =
-                itemResultRepository.findByUserIdAndMissionIdAndStatus(
-                        userId,
-                        missionId,
-                        MissionResultStatus.FAIL
-                );
-
-        // 2. 각 실패한 단계의 상태를 'NOT_ATTEMPTED'로 변경하여 재도전 가능하게 함
-        for (DroneMissionItemResult item : failedItems) {
-            item.setStatus(MissionResultStatus.NOT_ATTEMPTED);
-            itemResultRepository.save(item);  // 상태 갱신
+        for (DroneMissionResult result : failedResults) {
+            result.setStatus(MissionResultStatus.NOT_ATTEMPTED);
+            resultRepository.save(result);
         }
     }
 }
-
